优化图片列表资源释放逻辑