@@ -67,7 +67,7 @@ fi
 
 # 执行打包
 (cd "$target" && jpackage --name "$appName" --type app-image -m "$appMainClass" --runtime-image "$runtimeImage" \
---icon "$appIcon" --app-version "$appVersion" --java-options "-XX:+UseZGC" \
+--icon "$appIcon" --app-version "$appVersion" --java-options "-XX:+UseG1GC" \
 --java-options "--enable-native-access=javafx.graphics,com.github.kwhat.jnativehook,com.sun.jna,org.bytedeco.javacpp,org.bytedeco.opencv")
 echo "已完成 jpackage 打包"
 
